<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgndColour"
    tools:context="com.londonappbrewery.bitcointicker.MainActivity">

    <TextView
        android:id="@+id/bid"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="373dp"
        android:text="@string/label_default_text"
        android:textColor="@color/fontColour"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Bid_id"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="378dp"
        android:text="@string/bid_text"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="288dp"
        android:layout_marginBottom="281dp"
        android:text="@string/last_Text"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/label_default_text"
        android:textColor="@color/fontColour"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImage"
        android:contentDescription="@string/imageview_desc"
        android:src="@drawable/bitcoin_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="240dp"
        android:layout_below="@+id/last"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/base"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownSelector="@color/fontColour"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown" />


    </LinearLayout>

</RelativeLayout>
